Add html file Add css file add webpack

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <script src="https://kit.fontawesome.com/936703f17d.js" ></script>
+    <title>TODO List Application</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <section>
+        <div class="container">
+            <div class="lists">
+                <ul>
+                    <li class="todo-header">
+                        <p>Today's todo</p>
+                        <i class="fa-solid fa-rotate"></i>
+                    </li>
+                    <li class="inputs">
+                        <form action="#">
+                            <input type="text" name="list" id="lists" placeholder="Enter your activity">
+                        </form>
+                    </li>
+                    <li class="items">
+                        <div class="items-contents">
+                            <input type="checkbox">
+                            <p class="txt">going to parties</p>
+                        </div>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </li>
+                    <li class="clear">
+                        <p >Clear all completed</p>
+                    </li>
+                 </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
