Add validate form function

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                     </li>
                     <li class="inputs">
                         <form action="#">
-                            <input type="text" name="list" id="lists" placeholder="Enter your activity">
+                            <input type="text" name="list" id="task-input" placeholder="Enter your activity">
                         </form>
                     </li>
                     <li class="items">
