--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                         <i class="fa-solid fa-rotate"></i>
                     </li>
                     <li class="inputs">
-                        <form action="#">
+                        <form action="#" id="taskForm">
                             <input type="text" name="list" id="task-input" placeholder="Enter your activity">
                         </form>
                     </li>
